{
  "sourceLanguage" : "en",
  "strings" : {
    "%@ stay separate." : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "%@ stay separate."
          }
        }
      }
    },
    "%@ stays separate." : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "%@ stays separate."
          }
        }
      }
    },
    "%@ to %@" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "%@ to %@"
          }
        }
      }
    },
    "48V" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "48V"
          }
        }
      }
    },
    "Attack" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Attack"
          }
        }
      }
    },
    "Aux" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Aux"
          }
        }
      }
    },
    "Aux %lld" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Aux %lld"
          }
        }
      }
    },
    "Aux %lld-%lld" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Aux %lld-%lld"
          }
        }
      }
    },
    "Average level" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Average level"
          }
        }
      }
    },
    "Bass & guitar" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Bass & guitar"
          }
        }
      }
    },
    "Brass, wind & strings" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Brass, wind & strings"
          }
        }
      }
    },
    "Bus %lld" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Bus %lld"
          }
        }
      }
    },
    "Bus %lld-%lld" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Bus %lld-%lld"
          }
        }
      }
    },
    "Buses" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Buses"
          }
        }
      }
    },
    "Cables & playback" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cables & playback"
          }
        }
      }
    },
    "Ch %lld" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Ch %lld"
          }
        }
      }
    },
    "Ch %lld-%lld" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Ch %lld-%lld"
          }
        }
      }
    },
    "Comp" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Comp"
          }
        }
      }
    },
    "Compressor" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Compressor"
          }
        }
      }
    },
    "DCA" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "DCA"
          }
        }
      }
    },
    "DCA %lld" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "DCA %lld"
          }
        }
      }
    },
    "Delay" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Delay"
          }
        }
      }
    },
    "Detector" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Detector"
          }
        }
      }
    },
    "Drums & percussion" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Drums & percussion"
          }
        }
      }
    },
    "Ducker" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Ducker"
          }
        }
      }
    },
    "dynamics" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "dynamics"
          }
        }
      }
    },
    "Envelope" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Envelope"
          }
        }
      }
    },
    "EQ" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "EQ"
          }
        }
      }
    },
    "Expander" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Expander"
          }
        }
      }
    },
    "Expander 1:2" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Expander 1:2"
          }
        }
      }
    },
    "Expander 1:3" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Expander 1:3"
          }
        }
      }
    },
    "Expander 1:4" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Expander 1:4"
          }
        }
      }
    },
    "Fader" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Fader"
          }
        }
      }
    },
    "fader and mute" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "fader and mute"
          }
        }
      }
    },
    "Fed by" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Fed by"
          }
        }
      }
    },
    "Freq" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Freq"
          }
        }
      }
    },
    "FX" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "FX"
          }
        }
      }
    },
    "FX %lld" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "FX %lld"
          }
        }
      }
    },
    "FX %lld-%lld" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "FX %lld-%lld"
          }
        }
      }
    },
    "Gain" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Gain"
          }
        }
      }
    },
    "gain and delay" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "gain and delay"
          }
        }
      }
    },
    "Gate" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Gate"
          }
        }
      }
    },
    "Hold" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Hold"
          }
        }
      }
    },
    "Input" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Input"
          }
        }
      }
    },
    "Inputs" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Inputs"
          }
        }
      }
    },
    "Keys" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Keys"
          }
        }
      }
    },
    "Knee" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Knee"
          }
        }
      }
    },
    "Linear" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Linear"
          }
        }
      }
    },
    "Logarithmic" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Logarithmic"
          }
        }
      }
    },
    "Low cut" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Low cut"
          }
        }
      }
    },
    "Main" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Main"
          }
        }
      }
    },
    "Main LR" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Main LR"
          }
        }
      }
    },
    "Main M" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Main M"
          }
        }
      }
    },
    "Makeup gain" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Makeup gain"
          }
        }
      }
    },
    "Matrix" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Matrix"
          }
        }
      }
    },
    "Matrix %lld" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Matrix %lld"
          }
        }
      }
    },
    "Matrix %lld-%lld" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Matrix %lld-%lld"
          }
        }
      }
    },
    "Members" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Members"
          }
        }
      }
    },
    "Mix" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Mix"
          }
        }
      }
    },
    "Mode" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Mode"
          }
        }
      }
    },
    "Off" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Off"
          }
        }
      }
    },
    "On" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "On"
          }
        }
      }
    },
    "Other" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Other"
          }
        }
      }
    },
    "Pan" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Pan"
          }
        }
      }
    },
    "Peak level" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Peak level"
          }
        }
      }
    },
    "Q" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Q"
          }
        }
      }
    },
    "Range" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Range"
          }
        }
      }
    },
    "Ratio" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Ratio"
          }
        }
      }
    },
    "Release" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Release"
          }
        }
      }
    },
    "Sends" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Sends"
          }
        }
      }
    },
    "Slope" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Slope"
          }
        }
      }
    },
    "Speakers & routing" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Speakers & routing"
          }
        }
      }
    },
    "Threshold" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Threshold"
          }
        }
      }
    },
    "Time" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Time"
          }
        }
      }
    },
    "Trim" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Trim"
          }
        }
      }
    },
    "Type" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Type"
          }
        }
      }
    },
    "Vocals & mics" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Vocals & mics"
          }
        }
      }
    }
  },
  "version" : "1.0"
}
