...
    "Band" : {

    },
    "Blue" : {

    },
    "Cancel" : {

    },
    "Colour" : {

    },
    "Compressor curve" : {
...
    "Search icons" : {

    },
    "Sends aren't linked on the desk." : {

    },
    "Set" : {

    },
    "Shares an input with %@" : {

    },
    "Show unused" : {
...
